# june-projects

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  pyproject.toml
data/: shapefile.tgz
data/az_mesa_shapefiles/: MesaBeats.dbf  MesaBeats.sbn  MesaBeats.sbx  MesaBeats.shp  MesaBeats.shp.xml  MesaBeats.shx
