[project]
name = "june-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
